<resources>
    <string name="app_name">Movies</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_movie">Add Movie</string>
    <string name="movies">🎞 Movies</string>
    <string name="movie_poster" translatable="false">poster</string>
    <string name="movie_details">Movie\'s details</string>
    <string name="movie_edit">Edit Movie</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="edit">Edit</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="mark_favorite">Mark Favorite</string>
    <string name="cast">Cast</string>
    <string name="star">star</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="movie_age" translatable="false">%d+</string>
    <string name="movie_director">Directed by %s</string>
    <string name="movie_release">Release: %1$s</string>
    <string name="movie_rating">%1$s (%2$d ratings)</string>
    <string name="movie_create_and_edit">Movie creation and edition</string>
    <string name="synopsis">Synopsis</string>
    <string name="release_date">Release date</string>
    <string name="minimum_age">Minimum age</string>
    <string name="genres">Genres</string>
    <string name="add_picture">Add picture</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="name">Name</string>
    <string name="movie_delete">Delete Movie</string>
    <string name="confirm_deletion">Are you sure you want to delete it?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="add_genre">Add Genre</string>
    <string name="add_person">Add Person</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>