<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Synopsis -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/synopsisLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/synopsis"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/synopsisInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="5"
                android:gravity="top"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Release Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/releaseDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/release_date"
            app:layout_constraintTop_toBottomOf="@id/synopsisLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/releaseDateInput"
                android:focusable="false"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Minimum Age -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minAgeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/minimum_age"
            app:layout_constraintTop_toBottomOf="@id/releaseDateLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minAgeInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Genres -->
        <TextView
            android:id="@+id/genresLabel"
            android:text="@string/genres"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/minAgeLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"
            android:layout_width="match_parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genresChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:singleSelection="false"
            app:layout_constraintTop_toBottomOf="@id/genresLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Pictures -->
        <Button
            android:id="@+id/addPictureBtn"
            android:text="@string/add_picture"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/genresChipGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"
            android:layout_width="match_parent"/>

        <!-- Save -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveBtn"
            android:text="@string/save"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/addPictureBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:layout_width="match_parent"/>

        <!-- Delete -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteBtn"
            android:text="@string/delete"
            android:textColor="@color/design_default_color_error"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/saveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:layout_width="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
