<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/personListFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="pt.cravodeabril.movies.ui.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/movieListFragment"
        android:name="pt.cravodeabril.movies.ui.movie.MovieListFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movie_list">
        <argument
            android:name="filter"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="genre"
            android:defaultValue="@null"
            app:argType="string[]"
            app:nullable="true" />
        <argument
            android:name="sortBy"
            android:defaultValue="releaseDate"
            app:argType="string" />
        <argument
            android:name="sortOrder"
            android:defaultValue="desc"
            app:argType="string" />
        <argument
            android:name="favoritesOnly"
            android:defaultValue="false"
            app:argType="boolean" />

        <action
            android:id="@+id/action_movieListFragment_to_logInFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_movieListFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment">
            <argument
                android:name="movieId"
                app:argType="long" />
        </action>
        <action
            android:id="@+id/action_movieListFragment_to_movieCreateFragment"
            app:destination="@id/movieUpsertFragment" />
        <deepLink app:uri="movies://movies?genre={genreFilter}&amp;title={titleFilter}" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="pt.cravodeabril.movies.ui.movie.MovieDetailsFragment"
        android:label="@string/movie_details"
        tools:layout="@layout/fragment_movie_details">
        <argument
            android:name="movieId"
            app:argType="long" />
        <action
            android:id="@+id/action_movieDetailsFragment_to_movieListFragment"
            app:destination="@id/movieListFragment"
            app:popUpTo="@id/movieListFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_movieDetailsFragment_to_movieEditFragment"
            app:destination="@id/movieUpsertFragment">
            <argument
                android:name="movieId"
                app:argType="long" />
        </action>
        <deepLink app:uri="movies://movies/{movieId}" />
    </fragment>
    <fragment
        android:id="@+id/movieUpsertFragment"
        android:name="pt.cravodeabril.movies.ui.movie.MovieUpsertFragment"
        android:label="@string/movie_create_and_edit"
        tools:layout="@layout/fragment_movie_upsert">
        <argument
            android:name="movieId"
            android:defaultValue="-1L"
            app:argType="long" />
        <action
            android:id="@+id/action_movieUpsertFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment">
            <argument
                android:name="movieId"
                app:argType="long" />
        </action>
        <action
            android:id="@+id/action_movieUpsertFragment_to_logInFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/genreListFragment"
        android:name="pt.cravodeabril.movies.ui.genre.GenreListFragment"
        tools:layout="@layout/fragment_genre_list">
        <action
            android:id="@+id/action_genreListUpsertFragment_to_genreCreateFragment"
            app:destination="@+id/genreUpsertFragment" />
        <action
            android:id="@+id/action_genreListUpsertFragment_to_genreEditFragment"
            app:destination="@+id/genreUpsertFragment">
            <argument
                android:name="id"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/genreUpsertFragment"
        android:name="pt.cravodeabril.movies.ui.genre.GenreUpsertFragment"
        tools:layout="@layout/fragment_genre_upsert">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="-1L"/>

        <action
            android:id="@+id/action_genreUpsertFragment_to_logInFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/personListFragment"
        android:name="pt.cravodeabril.movies.ui.person.PersonListFragment"
        tools:layout="@layout/fragment_person_list">
        <action
            android:id="@+id/action_personListUpsertFragment_to_personCreateFragment"
            app:destination="@+id/personUpsertFragment" />
        <action
            android:id="@+id/action_personListUpsertFragment_to_personEditFragment"
            app:destination="@+id/personUpsertFragment">
            <argument
                android:name="id"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/personUpsertFragment"
        android:name="pt.cravodeabril.movies.ui.person.PersonUpsertFragment"
        tools:layout="@layout/fragment_person_upsert">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="-1L"/>
        <action
            android:id="@+id/action_personUpsertFragment_to_logInFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>